Spark Example (#117)
*Issue #, if available:*

*Description of changes:*
- Adds an example of Spark orchestrating the CLI so that those that need
to process big data can benefit from Spark's parallelization
capabilities.
- Bumps the CI version of Hadoop from 3.2.2 to 3.3.1
- Switches the Hadoop repo used for CI from `cdarlint` to
`kontext-text`, which took over after the Hadoop 3.2.2 release

By submitting this pull request, I confirm that you can use, modify,
copy, and redistribute this contribution, under the terms of your
choice.