@@ -58,6 +58,11 @@ dependencies {
     implementation project(":c3r-sdk-core")
     implementation project(":c3r-sdk-parquet")
 
+    // Spark
+    implementation 'org.apache.spark:spark-core_2.13:3.3.2'
+    implementation 'org.apache.spark:spark-streaming_2.13:3.3.2'
+    implementation 'org.apache.spark:spark-sql_2.13:3.3.2'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
@@ -80,6 +85,9 @@ test {
         showStandardStreams = false
     }
 
+    // Required for Spark. While Spark supports Java 17, it still makes a call to this class
+    // and will cause a runtime failure.
+    jvmArgs '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
 }
 
 jacocoTestReport {
